--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -209,6 +209,9 @@ bind = $mainMod SHIFT, y, exec, ~/env/script/hypr/move_to_workspace_left
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = immediate, class:^(Alacritty)$
+windowrulev2 = immediate, class:^(firefox)$
+windowrulev2 = immediate, class:^(jetbrains-datagrip)$
 
 # Side Monitor
 workspace=name:side,monitor:DP-1,default:1,persistent:true, layoutopt:orientation:top
