--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -86,9 +86,11 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-        
         vibrancy = 0.1696
     }
+
+    blurls = waybar
+    layerrule = blur,waybar
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
