--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -171,6 +171,7 @@ bind = $mainMod, f, exec, $browser
 bind = $mainMod, c, exec, google-chrome-stable
 bind = $mainMod, d, exec, $dbclient
 bind = $mainMod, p, exec, ~/env/script/sys/screenshot_wl
+bind = $mainMod, ESCAPE, exec, ~/env/script/hypr/lock_desktop
 bind = $mainMod, Q, killactive,
 
 # Move focus with mainMod + arrow keys
