--- a/config/waybar/config
+++ b/config/waybar/config
@@ -17,8 +17,7 @@
     "height": 24,
 
     "modules-left": [
-        "custom/logo",
-        "custom/active"
+        "hyprland/workspaces"
     ],
     "modules-center": [
         "hyprland/window", 
@@ -53,4 +52,17 @@
       "format": "{}", 
       "exec": "~/env/script/hypr/listen_workspace_change",
     },
+
+    "hyprland/workspaces": {
+      "format": "{icon}",
+	    "format-icons": {
+		    "1": "",
+		    "2": "",
+		    "3": "",
+		    "4": "", 
+		    "5": "",
+		    "active": "",
+		    "default": ""
+	    },
+    }
 }
