--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = false
 
 [bell]
 animation = "EaseOutExpo"
@@ -600,3 +599,6 @@ lines = 40
 [window.padding]
 x = 13
 y = 13
+
+[general]
+live_config_reload = false
