--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -36,12 +36,13 @@ exec-once = hyprpaper & waybar
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+# env = HYPRCURSOR_SIZE,24
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
+# env = XCURSOR_THEME,Openzone_White_Slim
 
 #####################
 ### LOOK AND FEEL ###
@@ -66,6 +67,11 @@ general {
     allow_tearing = true 
 
     layout = master
+}
+
+cursor {
+    sync_gsettings_theme = true
+    enable_hyprcursor = false
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
